# writetothem

./: .gitignore  .php-cs-fixer.dist.php  403.html  404.html  500.html  Dockerfile  Gemfile  README.md  composer.json  docker-compose.yml  footer.php  postgres.Dockerfile  pyproject.toml  todo.txt
.devcontainer/: devcontainer.json  onCreateCommand
conf/: .cvsignore  .gitignore  config.php.incvs  crontab-example  crontab.ugly  fyrqd-debian.ugly  fyrqd.service.ugly  fyrqd.sh  general-example  general.docker  httpd.conf  httpd.conf.docker  packages  php.ini.docker
db/: 0001-new-data-collection-columns.sql  0002-langauge-aware-messages.sql  0003-message-type.sql  default-ratty-rules.sql  schema.sql
dev/: dadem.cgi
doc/: queue-state-machine.fig
lib/: FYR.pm  dadem.php  mapit.php  simplexmlrpc.php  utility.php  votingarea.php
locale/: WriteToThem.pot
perllib/: FYR.pm
phplib/: DoBsP.bsv  admin-fyrqueue.php  admin-reps.php  cobrand.php  emailform.php  forms.php  fyr.php  mapit.php  places.bsv  questionnaire_report_2005_WMC.php  questionnaire_report_2006_WMC.php  questionnaire_report_2007_WMC.php  questionnaire_report_2008_WMC.php  questionnaire_report_2013_WMC.php  questionnaire_report_2014_WMC.php  questionnaire_report_2015_WMC.php  questionnaire_report_FYMP_WMC.php  queue.php  summary_report_2005.php  summary_report_2006.php  summary_report_2007.php  summary_report_2008.php  summary_report_2013.php  summary_report_2014.php  summary_report_2015.php  votingarea.php
script/: create-test-survey  lint  schema-update  watch
t/: Cobrand.t
templates/: footer.php  (+7 more)
(+369 files in other folders)
